@@ -1,3 +1,9 @@
+2002-04-25  Adam Fedor  <fedor@gnu.org>
+
+	* PCHistoryController.m (-setBrowser:): ASSIGN browser
+	(-dealloc): Release it.
+	* PCBrowserController.m: Idem.
+
 2002-03-03 14:47  probert
 
 	* PCHistoryController.m, PCProject.m: Fixed mem leak in the history
